fixed spacing

--- a/css/theme.css
+++ b/css/theme.css
@@ -12,6 +12,17 @@
   }
 
 .btn:hover {
+    background-color: aquamarine;
+}
+
+.a:visited {
+    color: aqua;
+}
+.a:hover {
+    color: aquamarine;
+}
+
+.btn:hover {
     background-color: darkslategrey;
 }
 .separator {
@@ -30,7 +41,7 @@
 }
 .container {
     height: auto;
-    width: 95%;
+    width: 90%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -51,18 +62,26 @@
     order: inherit;
     min-width: 100px;
     height: auto;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 .item {
     order: inherit;
     min-width: 50px;
     height: auto;
+    width: 20%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .proj-item {
     order: inherit;
     min-width: 120px;
-    width:120px;
+    width: 18%;
     height: auto;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 #proj-img {
     width: 120px;
